Fixed issue with empty scrollbars. Resolves #68.

--- a/_template/app/css/styles.css
+++ b/_template/app/css/styles.css
@@ -1036,7 +1036,7 @@
     font-size: 12px;
     line-height: 18px;
     opacity: 0.75;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
     padding: 36px 12px;
